[package]
name = "bevy_web_popups"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_web_popups"
repository = "https://github.com/rustunit/bevy_web_popups"
keywords = ["bevy", "gamedev", "web"]
description = "Allows to trigger web/dom based popups/alerts and textinput in bevy"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
bevy.workspace = true
bevy_crossbeam_event = "0.6.0"
[target.'cfg(target_family = "wasm")'.dependencies]
gloo = { version = "0.11", features = ["utils"] }

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "Document",
    "Element",
    "EventTarget",
]
